--- a/FinalProject.qmd
+++ b/FinalProject.qmd
@@ -30,4 +30,19 @@ view(hapi)
 view(life)
 ```
 
+Convert all values to Numeric type
+```{r}
+hapi |>
+  mutate(across(.cols=X2005:X2022, .fns = as.numeric))
+life |>
+  select(X2005:X2022) |>
+  mutate(across(.cols=everything(), .fns = as.numeric)) |>
+  
+```
+
+Pivot Longer
+```{r}
+hapi_longer |>
+  pivot_longer(cols = X2005:X2022, names_to = )
+```
 
