--- a/FinalProject.qmd
+++ b/FinalProject.qmd
@@ -26,8 +26,13 @@ library(english)
 ```
 
 Uploading data
+
 Life Expectancy Data Description: The number of years a newborn infant would live if the current mortality rates at different ages were to stay the same throughout its life. The main key is country and the life expectancy is under columns by year.
+
 Happiness Data Description: This is the national average response to the question of life evaluations asking the following “Please imagine a ladder, with steps numbered from 0 at the bottom to 10 at the top. The top of the ladder represents the best possible life for you and the bottom of the ladder represents the worst possible life for you. On which step of the ladder would you say you personally feel you stand at this time?” This measure is also referred to as Cantril life ladder. Gapminder has converted this indicator's scale from 0 to 100 to easly communicate it in terms of percentage. The main key is country and happiness score are under columns by year.
+
+Hypothesis
+We hypothesize that Happiness score will have a direct positive correlation with Life Expectancy, i.e. For each year, the higher the life expectancy, the higher happiness score. Of course, there will be some outliers, but for the most part we think that our hypothesis will be true.
 ```{r}
 hapi <- read.csv("hapiscore_whr.csv")
 life <- read.csv("lex.csv")
