--- a/FinalProject.qmd
+++ b/FinalProject.qmd
@@ -7,16 +7,13 @@ format:
     self-contained: true
     code-tools: true
     toc: true
-    number-sections: true
 editor: source
 execute: 
   error: true
-  echo: true
+  echo: false
   message: false
   warning: false
 ---
-
-Setup
 
 ```{r setup}
 #| include: false
@@ -26,37 +23,28 @@ library(english)
 
 ```
 
-Uploading data
+## About the Data
 
 Life Expectancy Data Description: The number of years a newborn infant would live if the current mortality rates at different ages were to stay the same throughout its life. The main key is country and the life expectancy is under columns by year.
 
 Happiness Data Description: This is the national average response to the question of life evaluations asking the following “Please imagine a ladder, with steps numbered from 0 at the bottom to 10 at the top. The top of the ladder represents the best possible life for you and the bottom of the ladder represents the worst possible life for you. On which step of the ladder would you say you personally feel you stand at this time?” This measure is also referred to as Cantril life ladder. Gapminder has converted this indicator's scale from 0 to 100 to easly communicate it in terms of percentage. The main key is country and happiness score are under columns by year.
 
-Hypothesis
+## Hypothesis
 We hypothesize that Happiness score will have a direct positive correlation with Life Expectancy, i.e. For each year, the higher the life expectancy, the higher happiness score. Of course, there will be some outliers, but for the most part we think that our hypothesis will be true.
 ```{r}
 hapi <- read.csv("hapiscore_whr.csv")
 life <- read.csv("lex.csv")
-view(hapi)
-view(life)
 ```
 
-Data Cleaning
 ```{r}
 hapi<-hapi |>
   mutate(across(.cols=X2005:X2022, .fns = as.numeric)) 
-head(hapi)
 life<-life |>
   select(country,X2005:X2022) |>
   mutate(across(.cols=X2005:X2022, .fns = as.numeric)) 
-head(life)
-  
 ```
-- All of the happiness scores and life expectancies are numbers, so we converted these values to the numeric type. 
-- Additionally, the happiness score data set only contains data from the years 2005-2022. So, we only selected those rows from the life expectancy so that they will have an equal amount of columns and years.
-
-
-Pivot Longer
+## Data Cleaning Process
+All of the happiness scores and life expectancies are numbers, so we converted these values to the numeric type. Additionally, the happiness score data set only contains data from the years 2005-2022. So, we only selected those rows from the life expectancy so that they will have an equal amount of columns and years.
 
 ```{r}
 hapiscore <- hapi %>% 
@@ -76,6 +64,18 @@ data <- hapiscore %>%
     inner_join(lex, by = c("country","year"))
 ```
 
+## Data Visualization
 ```{r}
-head(data)
+data |>
+  ggplot(aes(x=lex, y= happiness_score)) +
+  geom_point() +
+  labs(x = "Life Expectancy", y = '', subtitle = "Happiness Score", title = "Life Expectancy v.s Happiness Score")
 ```
+```{r}
+data |>
+  group_by(year)|>
+  ggplot(aes(x=lex, y= happiness_score)) +
+  geom_point() +
+  facet_wrap(vars(year))
+```
+
